SC20: fix for dodgy minpage in 6.7.1

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -1593,6 +1593,9 @@ Open your map with \gaia.
 \end{terminalv}
 \end{minipage}
 
+\begin{minipage}[c]{1.0\linewidth}
+\end{minipage}
+
 \vspace{0.5cm}
 \hspace{0.1cm}
 \begin{minipage}[c]{0.23\linewidth}
